--- a/components/feedback.html
+++ b/components/feedback.html
@@ -2,7 +2,7 @@
 <!DOCTYPE HTML>
 <html lang="" >
     <head>
-        <title>Welcome · ISLE Editor Documentation</title>
+        <title>Feedback Buttons · ISLE Editor Documentation</title>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
@@ -12,20 +12,20 @@
         
         
     
-    <link rel="stylesheet" href="gitbook/style.css">
+    <link rel="stylesheet" href="../gitbook/style.css">
 
     
             
                 
-                <link rel="stylesheet" href="gitbook/gitbook-plugin-highlight/website.css">
+                <link rel="stylesheet" href="../gitbook/gitbook-plugin-highlight/website.css">
                 
             
                 
-                <link rel="stylesheet" href="gitbook/gitbook-plugin-search/search.css">
+                <link rel="stylesheet" href="../gitbook/gitbook-plugin-search/search.css">
                 
             
                 
-                <link rel="stylesheet" href="gitbook/gitbook-plugin-fontsettings/website.css">
+                <link rel="stylesheet" href="../gitbook/gitbook-plugin-fontsettings/website.css">
                 
             
         
@@ -53,12 +53,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="gitbook/images/apple-touch-icon-precomposed-152.png">
-    <link rel="shortcut icon" href="gitbook/images/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="../gitbook/images/apple-touch-icon-precomposed-152.png">
+    <link rel="shortcut icon" href="../gitbook/images/favicon.ico" type="image/x-icon">
 
     
-    <link rel="next" href="install.html" />
+    <link rel="next" href="function-plot.html" />
     
+    
+    <link rel="prev" href="checkbox.html" />
     
 
     </head>
@@ -87,9 +89,9 @@
         
         
     
-        <li class="chapter active" data-level="1.1" data-path="./">
+        <li class="chapter " data-level="1.1" data-path="../">
             
-                <a href="./">
+                <a href="../">
             
                     
                     Welcome
@@ -100,9 +102,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.2" data-path="install.html">
+        <li class="chapter " data-level="1.2" data-path="../install.html">
             
-                <a href="install.html">
+                <a href="../install.html">
             
                     
                     Installation
@@ -113,9 +115,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.3" data-path="intro.html">
+        <li class="chapter " data-level="1.3" data-path="../intro.html">
             
-                <a href="intro.html">
+                <a href="../intro.html">
             
                     
                     Getting Started
@@ -127,9 +129,9 @@
             <ul class="articles">
                 
     
-        <li class="chapter " data-level="1.3.1" data-path="editor.html">
+        <li class="chapter " data-level="1.3.1" data-path="../editor.html">
             
-                <a href="editor.html">
+                <a href="../editor.html">
             
                     
                     ISLE Editor
@@ -140,9 +142,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.3.2" data-path="structure.html">
+        <li class="chapter " data-level="1.3.2" data-path="../structure.html">
             
-                <a href="structure.html">
+                <a href="../structure.html">
             
                     
                     Structure of an ISLE Lesson
@@ -158,9 +160,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4" data-path="components.html">
+        <li class="chapter " data-level="1.4" data-path="../components.html">
             
-                <a href="components.html">
+                <a href="../components.html">
             
                     
                     ISLE Components
@@ -172,9 +174,9 @@
             <ul class="articles">
                 
     
-        <li class="chapter " data-level="1.4.1" data-path="components/checkbox.html">
+        <li class="chapter " data-level="1.4.1" data-path="checkbox.html">
             
-                <a href="components/checkbox.html">
+                <a href="checkbox.html">
             
                     
                     Checkbox
@@ -185,9 +187,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.2" data-path="components/feedback.html">
+        <li class="chapter active" data-level="1.4.2" data-path="feedback.html">
             
-                <a href="components/feedback.html">
+                <a href="feedback.html">
             
                     
                     Feedback Buttons
@@ -198,9 +200,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.3" data-path="components/function-plot.html">
+        <li class="chapter " data-level="1.4.3" data-path="function-plot.html">
             
-                <a href="components/function-plot.html">
+                <a href="function-plot.html">
             
                     
                     Function Plot
@@ -211,9 +213,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.4" data-path="components/r-shell.html">
+        <li class="chapter " data-level="1.4.4" data-path="r-shell.html">
             
-                <a href="components/r-shell.html">
+                <a href="r-shell.html">
             
                     
                     R Shell
@@ -224,9 +226,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.5" data-path="components/switch.html">
+        <li class="chapter " data-level="1.4.5" data-path="switch.html">
             
-                <a href="components/switch.html">
+                <a href="switch.html">
             
                     
                     Switch
@@ -237,9 +239,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.6" data-path="components/latex.html">
+        <li class="chapter " data-level="1.4.6" data-path="latex.html">
             
-                <a href="components/latex.html">
+                <a href="latex.html">
             
                     
                     LaTeX Equations
@@ -255,9 +257,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.5" data-path="packaging.html">
+        <li class="chapter " data-level="1.5" data-path="../packaging.html">
             
-                <a href="packaging.html">
+                <a href="../packaging.html">
             
                     
                     Publishing Lessons
@@ -298,7 +300,7 @@
     <!-- Title -->
     <h1>
         <i class="fa fa-circle-o-notch fa-spin"></i>
-        <a href="." >Welcome</a>
+        <a href=".." >Feedback Buttons</a>
     </h1>
 </div>
 
@@ -313,9 +315,7 @@
     
                                 <section class="normal markdown-section">
                                 
-                                <h1 id="welcome">Welcome</h1>
-<p>Welcome to the documentation of the <em>interactive statistics learning environment</em> (ISLE) and the ISLE Editor for authoring interactive lessons for statistics and related disciplines.</p>
-
+                                
                                 
                                 </section>
                             
@@ -342,8 +342,12 @@
 
             
                 
+                <a href="checkbox.html" class="navigation navigation-prev " aria-label="Previous page: Checkbox">
+                    <i class="fa fa-angle-left"></i>
+                </a>
                 
-                <a href="install.html" class="navigation navigation-next navigation-unique" aria-label="Next page: Installation">
+                
+                <a href="function-plot.html" class="navigation navigation-next " aria-label="Next page: Function Plot">
                     <i class="fa fa-angle-right"></i>
                 </a>
                 
@@ -354,41 +358,41 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Welcome","level":"1.1","depth":1,"next":{"title":"Installation","level":"1.2","depth":1,"path":"install.md","ref":"install.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"ebook":"styles/ebook.css","epub":"styles/epub.css","mobi":"styles/mobi.css","pdf":"styles/pdf.css","print":"styles/print.css","website":"styles/website.css"},"pluginsConfig":{"fontsettings":{"family":"sans","size":3,"theme":"night"},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000},"sharing":{"all":["facebook","google","instapaper","twitter","weibo"],"facebook":true,"google":false,"instapaper":false,"twitter":true,"vk":false,"weibo":false},"theme-default":{"showLevel":false,"styles":{"ebook":"styles/ebook.css","epub":"styles/epub.css","mobi":"styles/mobi.css","pdf":"styles/pdf.css","print":"styles/print.css","website":"styles/website.css"}}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"README.md","mtime":"2016-06-24T13:21:20.144Z","type":"markdown"},"gitbook":{"version":"3.1.1","time":"2016-06-24T13:26:59.136Z"},"basePath":".","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Feedback Buttons","level":"1.4.2","depth":2,"next":{"title":"Function Plot","level":"1.4.3","depth":2,"path":"components/function-plot.md","ref":"components/function-plot.md","articles":[]},"previous":{"title":"Checkbox","level":"1.4.1","depth":2,"path":"components/checkbox.md","ref":"components/checkbox.md","articles":[]},"dir":"neutral"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"ebook":"styles/ebook.css","epub":"styles/epub.css","mobi":"styles/mobi.css","pdf":"styles/pdf.css","print":"styles/print.css","website":"styles/website.css"},"pluginsConfig":{"fontsettings":{"family":"sans","size":3,"theme":"night"},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000},"sharing":{"all":["facebook","google","instapaper","twitter","weibo"],"facebook":true,"google":false,"instapaper":false,"twitter":true,"vk":false,"weibo":false},"theme-default":{"showLevel":false,"styles":{"ebook":"styles/ebook.css","epub":"styles/epub.css","mobi":"styles/mobi.css","pdf":"styles/pdf.css","print":"styles/print.css","website":"styles/website.css"}}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/feedback.md","mtime":"2016-06-24T13:22:01.272Z","type":"markdown"},"gitbook":{"version":"3.1.1","time":"2016-06-24T13:26:59.136Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
 
         
-    <script src="gitbook/gitbook.js"></script>
-    <script src="gitbook/theme.js"></script>
+    <script src="../gitbook/gitbook.js"></script>
+    <script src="../gitbook/theme.js"></script>
     
         
-        <script src="gitbook/gitbook-plugin-edit-link/plugin.js"></script>
-        
-    
-        
-        <script src="gitbook/gitbook-plugin-search/search-engine.js"></script>
+        <script src="../gitbook/gitbook-plugin-edit-link/plugin.js"></script>
         
     
         
-        <script src="gitbook/gitbook-plugin-search/search.js"></script>
+        <script src="../gitbook/gitbook-plugin-search/search-engine.js"></script>
         
     
         
-        <script src="gitbook/gitbook-plugin-lunr/lunr.min.js"></script>
+        <script src="../gitbook/gitbook-plugin-search/search.js"></script>
         
     
         
-        <script src="gitbook/gitbook-plugin-lunr/search-lunr.js"></script>
+        <script src="../gitbook/gitbook-plugin-lunr/lunr.min.js"></script>
         
     
         
-        <script src="gitbook/gitbook-plugin-sharing/buttons.js"></script>
+        <script src="../gitbook/gitbook-plugin-lunr/search-lunr.js"></script>
         
     
         
-        <script src="gitbook/gitbook-plugin-fontsettings/fontsettings.js"></script>
+        <script src="../gitbook/gitbook-plugin-sharing/buttons.js"></script>
+        
+    
+        
+        <script src="../gitbook/gitbook-plugin-fontsettings/fontsettings.js"></script>
         
     
 
