--- a/components/feedback.html
+++ b/components/feedback.html
@@ -60,7 +60,7 @@
     <link rel="next" href="function-plot.html" />
     
     
-    <link rel="prev" href="checkbox.html" />
+    <link rel="prev" href="../components.html" />
     
 
     </head>
@@ -174,20 +174,7 @@
             <ul class="articles">
                 
     
-        <li class="chapter " data-level="1.4.1" data-path="checkbox.html">
-            
-                <a href="checkbox.html">
-            
-                    
-                    Checkbox
-            
-                </a>
-            
-
-            
-        </li>
-    
-        <li class="chapter active" data-level="1.4.2" data-path="feedback.html">
+        <li class="chapter active" data-level="1.4.1" data-path="feedback.html">
             
                 <a href="feedback.html">
             
@@ -200,12 +187,25 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.3" data-path="function-plot.html">
+        <li class="chapter " data-level="1.4.2" data-path="function-plot.html">
             
                 <a href="function-plot.html">
             
                     
                     Function Plot
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.3" data-path="markdown.html">
+            
+                <a href="markdown.html">
+            
+                    
+                    Markdown
             
                 </a>
             
@@ -315,7 +315,20 @@
     
                                 <section class="normal markdown-section">
                                 
-                                
+                                <h1 id="feedback-buttons">Feedback Buttons</h1>
+<p>Attach buttons to collect user feedback for an HTML element identified by its <code>id</code>.</p>
+<p>Example:</p>
+<pre><code class="lang-html"><span class="hljs-tag">&lt;<span class="hljs-name">span</span> <span class="hljs-attr">id</span>=<span class="hljs-string">&quot;myDiv&quot;</span>&gt;</span>For me, feedback is collected!<span class="hljs-tag">&lt;/<span class="hljs-name">span</span>&gt;</span>
+<span class="hljs-tag">&lt;<span class="hljs-name">FeedbackButtons</span>
+    <span class="hljs-attr">for</span>=<span class="hljs-string">&quot;myDiv&quot;</span>
+/&gt;</span>
+</code></pre>
+<p>Options:</p>
+<ul>
+<li><code>for</code>: <code>string</code> giving the <code>id</code> of the HTML element to collect feedback for. Required option.</li>
+<li><code>url</code>: <code>string</code> giving the URL to which a POST request is made with the collected user data. Default: <code>&apos;&apos;</code>.</li>
+</ul>
+
                                 
                                 </section>
                             
@@ -342,7 +355,7 @@
 
             
                 
-                <a href="checkbox.html" class="navigation navigation-prev " aria-label="Previous page: Checkbox">
+                <a href="../components.html" class="navigation navigation-prev " aria-label="Previous page: ISLE Components">
                     <i class="fa fa-angle-left"></i>
                 </a>
                 
@@ -358,7 +371,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Feedback Buttons","level":"1.4.2","depth":2,"next":{"title":"Function Plot","level":"1.4.3","depth":2,"path":"components/function-plot.md","ref":"components/function-plot.md","articles":[]},"previous":{"title":"Checkbox","level":"1.4.1","depth":2,"path":"components/checkbox.md","ref":"components/checkbox.md","articles":[]},"dir":"neutral"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"ebook":"styles/ebook.css","epub":"styles/epub.css","mobi":"styles/mobi.css","pdf":"styles/pdf.css","print":"styles/print.css","website":"styles/website.css"},"pluginsConfig":{"fontsettings":{"family":"sans","size":3,"theme":"night"},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000},"sharing":{"all":["facebook","google","instapaper","twitter","weibo"],"facebook":true,"google":false,"instapaper":false,"twitter":true,"vk":false,"weibo":false},"theme-default":{"showLevel":false,"styles":{"ebook":"styles/ebook.css","epub":"styles/epub.css","mobi":"styles/mobi.css","pdf":"styles/pdf.css","print":"styles/print.css","website":"styles/website.css"}}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/feedback.md","mtime":"2016-06-24T13:22:01.272Z","type":"markdown"},"gitbook":{"version":"3.1.1","time":"2016-06-24T13:26:59.136Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Feedback Buttons","level":"1.4.1","depth":2,"next":{"title":"Function Plot","level":"1.4.2","depth":2,"path":"components/function-plot.md","ref":"components/function-plot.md","articles":[]},"previous":{"title":"ISLE Components","level":"1.4","depth":1,"path":"components.md","ref":"components.md","articles":[{"title":"Feedback Buttons","level":"1.4.1","depth":2,"path":"components/feedback.md","ref":"components/feedback.md","articles":[]},{"title":"Function Plot","level":"1.4.2","depth":2,"path":"components/function-plot.md","ref":"components/function-plot.md","articles":[]},{"title":"Markdown","level":"1.4.3","depth":2,"path":"components/markdown.md","ref":"components/markdown.md","articles":[]},{"title":"R Shell","level":"1.4.4","depth":2,"path":"components/r-shell.md","ref":"components/r-shell.md","articles":[]},{"title":"Switch","level":"1.4.5","depth":2,"path":"components/switch.md","ref":"components/switch.md","articles":[]},{"title":"LaTeX Equations","level":"1.4.6","depth":2,"path":"components/latex.md","ref":"components/latex.md","articles":[]}]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"ebook":"styles/ebook.css","epub":"styles/epub.css","mobi":"styles/mobi.css","pdf":"styles/pdf.css","print":"styles/print.css","website":"styles/website.css"},"pluginsConfig":{"fontsettings":{"family":"sans","size":3,"theme":"sepia"},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000},"sharing":{"all":["facebook","google","instapaper","twitter","weibo"],"facebook":true,"google":false,"instapaper":false,"twitter":true,"vk":false,"weibo":false},"theme-default":{"showLevel":false,"styles":{"ebook":"styles/ebook.css","epub":"styles/epub.css","mobi":"styles/mobi.css","pdf":"styles/pdf.css","print":"styles/print.css","website":"styles/website.css"}}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/feedback.md","mtime":"2016-06-24T21:44:02.918Z","type":"markdown"},"gitbook":{"version":"3.1.1","time":"2016-06-24T21:57:32.279Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
