--- a/components/latex.html
+++ b/components/latex.html
@@ -57,7 +57,7 @@
     <link rel="shortcut icon" href="../gitbook/images/favicon.ico" type="image/x-icon">
 
     
-    <link rel="next" href="../packaging.html" />
+    <link rel="next" href="video-player.html" />
     
     
     <link rel="prev" href="switch.html" />
@@ -252,6 +252,19 @@
             
         </li>
     
+        <li class="chapter " data-level="1.4.7" data-path="video-player.html">
+            
+                <a href="video-player.html">
+            
+                    
+                    Video Player
+            
+                </a>
+            
+
+            
+        </li>
+    
 
             </ul>
             
@@ -364,7 +377,7 @@
                 </a>
                 
                 
-                <a href="../packaging.html" class="navigation navigation-next " aria-label="Next page: Publishing Lessons">
+                <a href="video-player.html" class="navigation navigation-next " aria-label="Next page: Video Player">
                     <i class="fa fa-angle-right"></i>
                 </a>
                 
@@ -375,7 +388,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"LaTeX Equations","level":"1.4.6","depth":2,"next":{"title":"Publishing Lessons","level":"1.5","depth":1,"path":"packaging.md","ref":"packaging.md","articles":[]},"previous":{"title":"Switch","level":"1.4.5","depth":2,"path":"components/switch.md","ref":"components/switch.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"ebook":"styles/ebook.css","epub":"styles/epub.css","mobi":"styles/mobi.css","pdf":"styles/pdf.css","print":"styles/print.css","website":"styles/website.css"},"pluginsConfig":{"fontsettings":{"family":"sans","size":3,"theme":"white"},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000},"sharing":{"all":["facebook","google","instapaper","twitter","weibo"],"facebook":true,"google":false,"instapaper":false,"twitter":true,"vk":false,"weibo":false},"theme-default":{"showLevel":false,"styles":{"ebook":"styles/ebook.css","epub":"styles/epub.css","mobi":"styles/mobi.css","pdf":"styles/pdf.css","print":"styles/print.css","website":"styles/website.css"}}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/latex.md","mtime":"2016-06-24T21:36:30.938Z","type":"markdown"},"gitbook":{"version":"3.1.1","time":"2016-07-10T20:23:07.756Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"LaTeX Equations","level":"1.4.6","depth":2,"next":{"title":"Video Player","level":"1.4.7","depth":2,"path":"components/video-player.md","ref":"components/video-player.md","articles":[]},"previous":{"title":"Switch","level":"1.4.5","depth":2,"path":"components/switch.md","ref":"components/switch.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"ebook":"styles/ebook.css","epub":"styles/epub.css","mobi":"styles/mobi.css","pdf":"styles/pdf.css","print":"styles/print.css","website":"styles/website.css"},"pluginsConfig":{"fontsettings":{"family":"sans","size":3,"theme":"white"},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000},"sharing":{"all":["facebook","google","instapaper","twitter","weibo"],"facebook":true,"google":false,"instapaper":false,"twitter":true,"vk":false,"weibo":false},"theme-default":{"showLevel":false,"styles":{"ebook":"styles/ebook.css","epub":"styles/epub.css","mobi":"styles/mobi.css","pdf":"styles/pdf.css","print":"styles/print.css","website":"styles/website.css"}}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/latex.md","mtime":"2016-06-24T21:36:30.938Z","type":"markdown"},"gitbook":{"version":"3.1.1","time":"2016-07-11T23:40:02.621Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
