--- a/components/dashboard.html
+++ b/components/dashboard.html
@@ -60,7 +60,7 @@
     <link rel="next" href="checkbox-input.html" />
     
     
-    <link rel="prev" href="../components.html" />
+    <link rel="prev" href="color-picker.md" />
     
 
     </head>
@@ -174,7 +174,20 @@
             <ul class="articles">
                 
     
-        <li class="chapter active" data-level="1.4.1" data-path="dashboard.html">
+        <li class="chapter " data-level="1.4.1" data-path="color-picker.md">
+            
+                <span>
+            
+                    
+                    Color Picker
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter active" data-level="1.4.2" data-path="dashboard.html">
             
                 <a href="dashboard.html">
             
@@ -188,7 +201,7 @@
             <ul class="articles">
                 
     
-        <li class="chapter " data-level="1.4.1.1" data-path="checkbox-input.html">
+        <li class="chapter " data-level="1.4.2.1" data-path="checkbox-input.html">
             
                 <a href="checkbox-input.html">
             
@@ -201,7 +214,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.1.2" data-path="number-input.html">
+        <li class="chapter " data-level="1.4.2.2" data-path="number-input.html">
             
                 <a href="number-input.html">
             
@@ -214,7 +227,20 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.1.3" data-path="slider-input.html">
+        <li class="chapter " data-level="1.4.2.3" data-path="select-input.md">
+            
+                <span>
+            
+                    
+                    Select Input
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.2.4" data-path="slider-input.html">
             
                 <a href="slider-input.html">
             
@@ -227,12 +253,51 @@
             
         </li>
     
+        <li class="chapter " data-level="1.4.2.5" data-path="text-input.md">
+            
+                <span>
+            
+                    
+                    Text Input
+            
+                </a>
+            
+
+            
+        </li>
+    
 
             </ul>
             
         </li>
     
-        <li class="chapter " data-level="1.4.2" data-path="feedback.html">
+        <li class="chapter " data-level="1.4.3" data-path="draggable-list.md">
+            
+                <span>
+            
+                    
+                    Draggable List
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.4" data-path="expire.md">
+            
+                <span>
+            
+                    
+                    Expire
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.5" data-path="feedback.html">
             
                 <a href="feedback.html">
             
@@ -245,7 +310,72 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.3" data-path="plots.md">
+        <li class="chapter " data-level="1.4.6" data-path="free-text-question.md">
+            
+                <span>
+            
+                    
+                    Free Text Question
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.7" data-path="grid.md">
+            
+                <span>
+            
+                    
+                    Grid
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.8" data-path="lesson-submit.md">
+            
+                <span>
+            
+                    
+                    Lesson Submit
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.9" data-path="match-list-question.md">
+            
+                <span>
+            
+                    
+                    Match List Question
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.10" data-path="multiple-choice-question.md">
+            
+                <span>
+            
+                    
+                    Multiple Choice Question
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.11" data-path="plots.md">
             
                 <span>
             
@@ -259,7 +389,7 @@
             <ul class="articles">
                 
     
-        <li class="chapter " data-level="1.4.3.1" data-path="function-plot.html">
+        <li class="chapter " data-level="1.4.11.1" data-path="function-plot.html">
             
                 <a href="function-plot.html">
             
@@ -272,7 +402,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.3.2" data-path="density-plot.html">
+        <li class="chapter " data-level="1.4.11.2" data-path="density-plot.html">
             
                 <a href="density-plot.html">
             
@@ -285,7 +415,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.3.3" data-path="r-plot.html">
+        <li class="chapter " data-level="1.4.11.3" data-path="r-plot.html">
             
                 <a href="r-plot.html">
             
@@ -303,7 +433,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.4" data-path="r-help.html">
+        <li class="chapter " data-level="1.4.12" data-path="r-help.html">
             
                 <a href="r-help.html">
             
@@ -316,7 +446,20 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.5" data-path="r-shell.html">
+        <li class="chapter " data-level="1.4.13" data-path="r-output.md">
+            
+                <span>
+            
+                    
+                    R Output
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.14" data-path="r-shell.html">
             
                 <a href="r-shell.html">
             
@@ -329,7 +472,33 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.6" data-path="switch.html">
+        <li class="chapter " data-level="1.4.15" data-path="r-table.md">
+            
+                <span>
+            
+                    
+                    R Table
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.16" data-path="slider.md">
+            
+                <span>
+            
+                    
+                    Slider
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.17" data-path="switch.html">
             
                 <a href="switch.html">
             
@@ -342,7 +511,33 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.7" data-path="latex.html">
+        <li class="chapter " data-level="1.4.18" data-path="text-area.md">
+            
+                <span>
+            
+                    
+                    Text Area
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.19" data-path="timer.html">
+            
+                <a href="timer.html">
+            
+                    
+                    Timer
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.20" data-path="latex.html">
             
                 <a href="latex.html">
             
@@ -355,7 +550,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.8" data-path="video-player.html">
+        <li class="chapter " data-level="1.4.21" data-path="video-player.html">
             
                 <a href="video-player.html">
             
@@ -472,7 +667,7 @@
 
             
                 
-                <a href="../components.html" class="navigation navigation-prev " aria-label="Previous page: ISLE Components">
+                <a href="color-picker.md" class="navigation navigation-prev " aria-label="Previous page: Color Picker">
                     <i class="fa fa-angle-left"></i>
                 </a>
                 
@@ -488,7 +683,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Dashboard","level":"1.4.1","depth":2,"next":{"title":"Checkbox Input","level":"1.4.1.1","depth":3,"path":"components/checkbox-input.md","ref":"components/checkbox-input.md","articles":[]},"previous":{"title":"ISLE Components","level":"1.4","depth":1,"path":"components.md","ref":"components.md","articles":[{"title":"Dashboard","level":"1.4.1","depth":2,"path":"components/dashboard.md","ref":"components/dashboard.md","articles":[{"title":"Checkbox Input","level":"1.4.1.1","depth":3,"path":"components/checkbox-input.md","ref":"components/checkbox-input.md","articles":[]},{"title":"Number Input","level":"1.4.1.2","depth":3,"path":"components/number-input.md","ref":"components/number-input.md","articles":[]},{"title":"Slider Input","level":"1.4.1.3","depth":3,"path":"components/slider-input.md","ref":"components/slider-input.md","articles":[]}]},{"title":"Feedback Buttons","level":"1.4.2","depth":2,"path":"components/feedback.md","ref":"components/feedback.md","articles":[]},{"title":"Plots","level":"1.4.3","depth":2,"path":"components/plots.md","ref":"components/plots.md","articles":[{"title":"Function Plot","level":"1.4.3.1","depth":3,"path":"components/function-plot.md","ref":"components/function-plot.md","articles":[]},{"title":"Density Plot","level":"1.4.3.2","depth":3,"path":"components/density-plot.md","ref":"components/density-plot.md","articles":[]},{"title":"R Plot","level":"1.4.3.3","depth":3,"path":"components/r-plot.md","ref":"components/r-plot.md","articles":[]}]},{"title":"R Help","level":"1.4.4","depth":2,"path":"components/r-help.md","ref":"components/r-help.md","articles":[]},{"title":"R Shell","level":"1.4.5","depth":2,"path":"components/r-shell.md","ref":"components/r-shell.md","articles":[]},{"title":"Switch","level":"1.4.6","depth":2,"path":"components/switch.md","ref":"components/switch.md","articles":[]},{"title":"LaTeX Equations","level":"1.4.7","depth":2,"path":"components/latex.md","ref":"components/latex.md","articles":[]},{"title":"Video Player","level":"1.4.8","depth":2,"path":"components/video-player.md","ref":"components/video-player.md","articles":[]}]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/dashboard.md","mtime":"2016-09-27T14:11:18.883Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-11-11T07:20:50.706Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Dashboard","level":"1.4.2","depth":2,"next":{"title":"Checkbox Input","level":"1.4.2.1","depth":3,"path":"components/checkbox-input.md","ref":"components/checkbox-input.md","articles":[]},"previous":{"title":"Color Picker","level":"1.4.1","depth":2,"path":"components/color-picker.md","ref":"components/color-picker.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/dashboard.md","mtime":"2016-09-27T14:11:18.883Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-11-11T08:15:33.766Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
