--- a/components/timer.html
+++ b/components/timer.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-        <title>R Help · ISLE Editor Documentation</title>
+        <title>Timer · ISLE Editor Documentation</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="description" content="">
         <meta name="generator" content="GitBook 3.2.2">
@@ -57,10 +57,10 @@
     <link rel="shortcut icon" href="../gitbook/images/favicon.ico" type="image/x-icon">
 
     
-    <link rel="next" href="r-output.md" />
+    <link rel="next" href="latex.html" />
     
     
-    <link rel="prev" href="r-plot.html" />
+    <link rel="prev" href="text-area.md" />
     
 
     </head>
@@ -433,7 +433,7 @@
             
         </li>
     
-        <li class="chapter active" data-level="1.4.12" data-path="r-help.html">
+        <li class="chapter " data-level="1.4.12" data-path="r-help.html">
             
                 <a href="r-help.html">
             
@@ -524,7 +524,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.19" data-path="timer.html">
+        <li class="chapter active" data-level="1.4.19" data-path="timer.html">
             
                 <a href="timer.html">
             
@@ -611,7 +611,7 @@
     <!-- Title -->
     <h1>
         <i class="fa fa-circle-o-notch fa-spin"></i>
-        <a href=".." >R Help</a>
+        <a href=".." >Timer</a>
     </h1>
 </div>
 
@@ -626,16 +626,23 @@
     
                                 <section class="normal markdown-section">
                                 
-                                <h1 id="r-help">R Help</h1>
-<p>Make words pull up R documentation in a modal window when clicked.</p>
+                                <h1 id="timer-component">Timer Component</h1>
+<p>The Timer component provides a timer that will trigger a predefined callback when the time is up. An example use case is for the timing of quizzes.</p>
 <p>Example:</p>
-<pre><code class="lang-html"><span class="hljs-tag">&lt;<span class="hljs-name">RHelp</span> <span class="hljs-attr">library</span>=<span class="hljs-string">&quot;graphics&quot;</span>&gt;</span>hist<span class="hljs-tag">&lt;/<span class="hljs-name">RHelp</span>&gt;</span> is used to create a histogram.
-</code></pre>
-<h2 id="options">Options</h2>
+<pre><code>&lt;Timer 
+  id=&apos;test-quiz&apos;
+  active={true} 
+  duration={50} 
+  onTimeUp={function(){
+    console.log(&apos;done&apos;);
+  }}
+/&gt;
+</code></pre><h2 id="options">Options</h2>
 <ul>
-<li><strong>func</strong>: name of the <code>R function</code> for which to open the documentation. If not supplied, the content of the <code>RHelp</code> tag is assumed to be equal to the name of the function. Default: <code>&apos;&apos;</code>.</li>
-<li><strong>library</strong>: name of the R package in which the function resides. Default: <code>base</code>.</li>
-<li><strong>visible</strong>: <code>boolean</code> indicating whether the help modal window should be opened at startup. Default: <code>false</code>.</li>
+<li><strong>id</strong>:  the unique <code>string</code> ID for the timer. The timer component is persistent over page refreshes. Required.</li>
+<li><strong>active</strong>: <code>boolean</code> flag that can be toggled to start or pause the timer. Default: <code>false</code>.</li>
+<li><strong>duration</strong>: Duration in <code>number</code> seconds for the timer. Required. </li>
+<li><strong>onTimeUp</strong>: Callback <code>function</code> invoked when the timer runs out. Required. </li>
 </ul>
 
                                 
@@ -664,12 +671,12 @@
 
             
                 
-                <a href="r-plot.html" class="navigation navigation-prev " aria-label="Previous page: R Plot">
+                <a href="text-area.md" class="navigation navigation-prev " aria-label="Previous page: Text Area">
                     <i class="fa fa-angle-left"></i>
                 </a>
                 
                 
-                <a href="r-output.md" class="navigation navigation-next " aria-label="Next page: R Output">
+                <a href="latex.html" class="navigation navigation-next " aria-label="Next page: LaTeX Equations">
                     <i class="fa fa-angle-right"></i>
                 </a>
                 
@@ -680,7 +687,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"R Help","level":"1.4.12","depth":2,"next":{"title":"R Output","level":"1.4.13","depth":2,"path":"components/r-output.md","ref":"components/r-output.md","articles":[]},"previous":{"title":"R Plot","level":"1.4.11.3","depth":3,"path":"components/r-plot.md","ref":"components/r-plot.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/r-help.md","mtime":"2016-09-27T14:11:18.883Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-11-11T08:15:33.766Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Timer","level":"1.4.19","depth":2,"next":{"title":"LaTeX Equations","level":"1.4.20","depth":2,"path":"components/latex.md","ref":"components/latex.md","articles":[]},"previous":{"title":"Text Area","level":"1.4.18","depth":2,"path":"components/text-area.md","ref":"components/text-area.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/timer.md","mtime":"2016-09-27T14:11:18.883Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-11-11T08:15:33.766Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
